# task_for_Wartsila

./: CMakeLists.txt  Request.h  Stopper.cpp  Stopper.h  Worker.cpp  Worker.h  main.cpp
src/: Request.cpp  Request.h  Stopper.cpp  Stopper.h  Worker.cpp  Worker.h
